deployment/delegator/delegator-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: delegator
spec:
  selector:
    matchLabels:
      app: delegator
  replicas: 1
  template:
    metadata:
      labels:
        app: delegator
    spec:
      containers:
      - name: delegator
        image: registry.internal.iosis.tech/zetina-delegator
        command: ["bash", "-ci", "cargo run --release --bin zetina-delegator -- -p 018ef9563461ec2d88236d59039babf44c97d8bf6200d01d81170f1f60a78f34 -d /ip4/83.238.171.134/tcp/5679/p2p/QmVUbnW8PjFw2yUt1DDukUTZrK1t2vPGkNb1SQgserjaXV -d /ip4/83.238.171.134/tcp/5681/p2p/QmUEi69CXN8SXEYhkzoqJzQ6aEHTKqJzewqirBiT8FKmBu -d /ip4/83.238.171.134/tcp/5683/p2p/QmYaed2psXu4UMTXqrrRUE7PaYnwGFkvGvKvTUBCQSry4S"]
        resources:
          requests:
            cpu: "1"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "1Gi"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: delegator-service
spec:
  selector:
    app: delegator
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delegator-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx-ingress-prod
  tls:
  - hosts:
    - delegator.zetina.iosis.tech
    secretName: zetina-tls
  rules:
  - host: delegator.zetina.iosis.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: delegator-service
            port:
              number: 80
