deployment/delegator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delegator-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delegator-1
  template:
    metadata:
      labels:
        app: delegator-1
    spec:
      containers:
      - name: delegator-1
        image: registry.internal.iosis.tech/zetina-delegator:latest
        args: ["bash", "-ci", "cargo run --release --bin zetina-delegator -- -l /ip4/0.0.0.0/tcp/5685 -p $(PRIVATE_KEY) -a $(ADDRESS) -d $(DIAL)"]
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
        ports:
        - containerPort: 3000
        - containerPort: 5684
        - containerPort: 5685
---
apiVersion: v1
kind: Service
metadata:
  name: delegator-1-service
  annotations:
    kube-vip.io/loadbalancerIPs: "0.0.0.0"
    kube-vip.io/hwaddr: "00:00:6C:32:98:85"
    kube-vip.io/loadbalancerHostname: "zetina-delegator-1"
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: api-port
  - port: 5684
    targetPort: 5684
    protocol: UDP
    name: p2p-quic-port
  - port: 5685
    targetPort: 5685
    protocol: TCP
    name: p2p-tcp-port
  selector:
    app: delegator-1
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delegator-1-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx-ingress-prod
  tls:
  - hosts:
    - api.delegator.zetina.iosis.tech
    secretName: zetina-tls
  rules:
  - host: api.delegator.zetina.iosis.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: delegator-1-service
            port:
              number: 3000
